Detach stylesheets into common.css

--- a/countdown.html
+++ b/countdown.html
@@ -6,37 +6,8 @@
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/MarkUp/SCHEMA/xhtml11.xsd">
 <head>
-<title>Frickeltimer</title>
-<style type="text/css">/* <![CDATA[ */
-body {
-	color: #000;
-	background-color: #fff;
-}
-
-a {
-	text-decoration: none;
-	color: #00f;
-}
-
-div#frickeltimer {
-	font-size: 50pt;
-	text-align: center;
-	width: 3em;
-	border: #aaa 2px solid;
-	float: left;
-	margin: 10px 50px 10px 10px;
-}
-
-p {
-	margin: 3pt;
-}
-
-input {
-	border: #aaa 1px solid;
-	width: 2em;
-	text-align: center;
-}
-/* ]]> */</style>
+ <title>Frickeltimer</title>
+ <link rel="stylesheet" type="text/css" href="common.css" />
 </head>
 <body>
 <div id="frickeltimer">
