--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
  xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/MarkUp/SCHEMA/xhtml11.xsd">
 <head>
  <title>Frickeltimer Popup Launcher</title>
+ <link rel="stylesheet" type="text/css" href="common.css" />
 </head>
 <body>
 <script type="text/javascript">/* <![CDATA[ */
