Add another timer version with "remote control"

--- a/index.html
+++ b/index.html
@@ -11,11 +11,160 @@
 </head>
 <body>
 <script type="text/javascript">/* <![CDATA[ */
-function launch() {
-	ft = window.open("countdown.html", "Frickeltimer", "toolbar=no,location=no,menubar=no,status=no,scrollbars=no,resizable=yes,width=360,height=120");
+const TEXT = 0;
+const TAG = 1;
+var ftimers = new Array();
+
+/* (cheap variant using recursion) */
+function build_node(data)
+{
+	switch (data[0]) {
+	case TEXT:
+		return document.createTextNode(data[1]);
+	case TAG:
+		var element = document.createElement(data[1]);
+		var attrs = data[2]
+		/* add attributes */
+		for (var attrName in attrs) {
+			var attr = document.createAttribute(attrName);
+			attr.nodeValue = attrs[attrName];
+			element.setAttributeNode(attr);
+		}
+		/* add subnodes */
+		for (var i = 3; i < data.length; i++) {
+			/* recursion */
+			element.appendChild(build_node(data[i]));
+		}
+		return element;
+	default:
+		return null;
+	}
+}
+
+function launch_indep()
+{
+	var ft = window.open("countdown.html", "Frickeltimer", "toolbar=no,location=no,menubar=no,status=no,scrollbars=no,resizable=yes,width=360,height=120");
 	ft.focus();
 }
+
+function launch()
+{
+	var ft = {
+		winref: window.open("timer.html", "Frickeltimer"+ftimers.length, "toolbar=no,location=no,menubar=no,status=no,scrollbars=no,resizable=yes,width=360,height=120"),
+		pause: true,
+		seconds: 0,
+		cnt: 10,
+		timer: null
+	}
+	ft.winref.focus();
+	var idx = ftimers.push(ft) - 1;
+	ft.winref.document.title = "Frickeltimer ["+idx+"]";
+
+	// add timercontrols for ft
+	var subcontrols = [
+	 TAG, 'form', {'name': 't'+idx, 'action': ''},
+	 [TAG, 'p', {},
+	  [TAG, 'input', {'type': 'text', 'name': 'm'}],
+	  [TEXT, 'm '],
+	  [TAG, 'input', {'type': 'text', 'name': 's'}],
+	  [TEXT, 's '],
+	  [TAG, 'a', {'href': '#', 'onclick': 'stop('+idx+'); startFrom('+idx+', document.t'+idx+')'},
+	   [TEXT, 'start']
+	  ]
+	 ]
+	];
+	var controls = [
+	 [TAG, 'hr'],
+	 subcontrols,
+	 [TAG, 'p', {},
+	  [TAG, 'a', {'href': '#', 'onclick': 'stop('+idx+'); start('+idx+', 10*60)'},
+	   [TEXT, '10m']
+	  ],
+	  [TEXT, ' '],
+	  [TAG, 'a', {'href': '#', 'onclick': 'stop('+idx+'); start('+idx+', 5*60)'},
+	   [TEXT, '5m']
+	  ],
+	  [TEXT, ' '],
+	  [TAG, 'a', {'href': '#', 'onclick': 'stop('+idx+'); start('+idx+', 3*60)'},
+	   [TEXT, '3m']
+	  ],
+	  [TEXT, ' '],
+	  [TAG, 'a', {'href': '#', 'onclick': 'stop('+idx+'); start('+idx+', 1*60)'},
+	   [TEXT, '1m']
+	  ]
+	 ],
+	 [TAG, 'p', {},
+	  [TAG, 'a', {'href': '#', 'onclick': 'stop('+idx+');'},
+	   [TEXT, 'stop']
+	  ],
+	  [TEXT, ' '],
+	  [TAG, 'a', {'href': '#', 'onclick': 'togglePause('+idx+');'},
+	   [TEXT, 'pause']
+	  ]
+	 ]
+	];
+	for (var i = 0; i < controls.length; i++) {
+		document.getElementById('timercontrols').appendChild(build_node(controls[i]));
+	}
+}
+
+function countdown(idx)
+{
+	var sec = ftimers[idx].seconds % 60;
+	var min = (ftimers[idx].seconds-sec)/60;
+	if (sec < 10) {
+		sec = "0"+sec;
+	}
+	ftimers[idx].winref.document.getElementById('frickeltimer').firstChild.nodeValue = min+":"+sec;
+
+	if (ftimers[idx].seconds > 0) {
+		if (!ftimers[idx].pause) {
+			if (ftimers[idx].cnt == 0) {
+				ftimers[idx].seconds -= 1;
+				ftimers[idx].cnt = 10;
+			} else {
+				ftimers[idx].cnt -= 1;
+			}
+		}
+		ftimers[idx].timer = setTimeout('countdown('+idx+')',100);
+	} else {
+		ftimers[idx].timer = null;
+	}
+}
+
+function stop(idx)
+{
+	if (ftimers[idx].timer != null) {
+		clearTimeout(ftimers[idx].timer)
+	}
+	ftimers[idx].seconds = 0;
+	ftimers[idx].winref.document.getElementById('frickeltimer').firstChild.nodeValue = "-:--";
+}
+
+function start(idx, s)
+{
+	ftimers[idx].seconds = s;
+	ftimers[idx].cnt = 10;
+	ftimers[idx].pause = false;
+	countdown(idx);
+}
+
+function startFrom(idx, el)
+{
+	start(idx, 60*el.m.value + 1*el.s.value);
+}
+
+function togglePause(idx)
+{
+	ftimers[idx].pause = !ftimers[idx].pause;
+}
 /* ]]> */</script>
-<p><a href="#" onclick="launch()">Launch Frickeltimer in popup.</a></p>
+
+<p><a href="#" onclick="launch_indep()">Launch independent Frickeltimer in popup.</a></p>
+
+<p><a href="#" onclick="launch()">Launch Frickeltimer in popup with controls below.</a></p>
+
+<div id="timercontrols"></div>
+
 </body>
 </html>
