Add styles for controls and headlines

--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@ function launch()
 
 	// add timercontrols for ft
 	var controls =
-	 [TAG, 'div', {'id': 'timercontrol'+idx},
-	  [TAG, 'hr'],
+	 [TAG, 'div', {'id': 'timercontrol'+idx, 'class': 'controls'},
 	  [TAG, 'h2', {},
 	   [TEXT, ft.title]
 	  ],
